Armature, scaling difference between octrahedal and envelope display modes. #38077

Closed
opened 2014-01-05 13:42:50 +01:00 by Martin Lindelöf · 11 comments

System Information
Windows 8.1 GTX 580 3GB

Blender Version
Broken: (example: 2.69.7 19103b4, see splash screen)
Worked: (optional)

Short description of error
Look, http://instagram.com/p/iyZbDVI73H/
Scaling octrahedal works as suspected scaling towards 3d cursor.
but using envelope it scales individual or almost like ALT+S scaling.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

just add armature with some bones, and scale towards 3D Cursor and check the difference between Display mode: Octahedral versus Envelope bones.

**System Information** Windows 8.1 GTX 580 3GB **Blender Version** Broken: (example: 2.69.7 19103b4, see splash screen) Worked: (optional) **Short description of error** Look, http://instagram.com/p/iyZbDVI73H/ Scaling octrahedal works as suspected scaling towards 3d cursor. but using envelope it scales individual or almost like ALT+S scaling. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps just add armature with some bones, and scale towards 3D Cursor and check the difference between Display mode: Octahedral versus Envelope bones.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MartinLindelof

Added subscriber: @MartinLindelof

Added subscriber: @brecht

Added subscriber: @brecht

I couldn't reproduce this problem, I created a simple armature setup but the scaling is the same regardless of the armature display. Can you attach a .blend file that show the problem?

Also, it's not clear to me which Blender version you are testing this with.

I couldn't reproduce this problem, I created a simple armature setup but the scaling is the same regardless of the armature display. Can you attach a .blend file that show the problem? Also, it's not clear to me which Blender version you are testing this with.
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

I can reproduce this issue here on 0d57724

Apparently you need to be in Edit Mode. Everything works fine in Pose Mode.

See attached file: 38077-bone_scale_shrink_bug.blend

I can reproduce this issue here on 0d57724 Apparently you need to be in Edit Mode. Everything works fine in Pose Mode. See attached file: [38077-bone_scale_shrink_bug.blend](https://archive.blender.org/developer/F64571/38077-bone_scale_shrink_bug.blend)
Joshua Leung self-assigned this 2014-01-09 12:31:16 +01:00
Member

Assigning to self.

After some further investigations, it appears that the situation here is quite messy and needs a bit of a clean up.

According to the code, the cause of this report is a a "hidden feature" (or rather, a special hack). See transform_conversions.c : 1075

 /* special hack for envelope drawmode and scaling:
*  to allow scaling the size of the envelope around single points,
*  mode should become TFM_BONE_ENVELOPE in this case
*/
  // TODO: maybe we need a separate hotkey for it, but this is consistent with 2.4x for now

This hack is however incorrect: The reason those single points cannot be scaled is because in edit mode, the "Scale Envelope/BBone" operation (i.e. TFM_BONESIZE) gets partially converted to "envelope editing" (i.e. TFM_BONE_ENVELOPE) . That is, while the operations performed are changed to TFM_BONE_ENVELOPE, the type is still TFM_BONESIZE. Thus, joints are ignored (as the TFM_BONESIZE operator only works on complete bones).

Complicating matters a bit more is the fact that there are 2 different influence areas that can be adjusted for envelope bones. While the existing "Scale Envelope/BBone" option tackled the "distance" property (which only exists on a per-bone basis), the scaling hack above actually applies to the "radius" values on the joints.

Assigning to self. After some further investigations, it appears that the situation here is quite messy and needs a bit of a clean up. According to the code, the cause of this report is a a "hidden feature" (or rather, a special hack). See transform_conversions.c : 1075 ``` /* special hack for envelope drawmode and scaling: ``` * to allow scaling the size of the envelope around single points, * mode should become TFM_BONE_ENVELOPE in this case */ ``` // TODO: maybe we need a separate hotkey for it, but this is consistent with 2.4x for now ``` This hack is however incorrect: The reason those single points cannot be scaled is because in edit mode, the "Scale Envelope/BBone" operation (i.e. TFM_BONESIZE) gets partially converted to "envelope editing" (i.e. TFM_BONE_ENVELOPE) . That is, while the operations performed are changed to TFM_BONE_ENVELOPE, the type is still TFM_BONESIZE. Thus, joints are ignored (as the TFM_BONESIZE operator only works on complete bones). Complicating matters a bit more is the fact that there are 2 different influence areas that can be adjusted for envelope bones. While the existing "Scale Envelope/BBone" option tackled the "distance" property (which only exists on a per-bone basis), the scaling hack above actually applies to the "radius" values on the joints.

This issue was referenced by blender/blender-addons-contrib@0445454f1e

This issue was referenced by blender/blender-addons-contrib@0445454f1e9409058c465b80c180ca8c25b45772

This issue was referenced by 0445454f1e

This issue was referenced by 0445454f1e9409058c465b80c180ca8c25b45772
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 0445454f1e.

Closed by commit 0445454f1e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38077
No description provided.